[package]
name = "rusting-actix-diesel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = {version = "2.1.0", features = ["sqlite", "r2d2", "chrono"]}
actix-web = "3.0"
actix-rt = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"

